2010-07-23  Lukas Huonker  <l.huonker@gmail.com>

	* play/tetris.el (tetris-tty-colors, tetris-x-colors, tetris-blank):
	Remove leading nil element, adjust values.
	(tetris-shapes, tetris-shape-scores):
	Change representation of shapes and remove some redundancy.
	(tetris-get-shape-cell, tetris-shape-width, tetris-draw-next-shape)
	(tetris-draw-shape, tetris-erase-shape, tetris-test-shape):
	Adjust for working with new representation of shapes.
	(tetris-shape-rotations): New function.
	(tetris-move-bottom, tetris-move-left, tetris-move-right)
	(tetris-rotate-prev, tetris-rotate-next):
	Adjust for working with the new version of tetris-test-shape.

2010-07-23  Markus Triska  <markus.triska@gmx.at>

	* progmodes/ps-mode.el: Use comint (bug#5954).
	(ps-run-mode-map): Adapt for comint-mode; omit "\r", [return]..
	(ps-mode-other-newline): Simplify.
	(ps-run-mode): Derive from comint-mode instead of
	fundamental-mode, yielding input history etc.
	(ps-run-start, ps-run-quit, ps-run-clear, ps-run-region)
	(ps-run-send-string): Adapt for comint-mode.
	(ps-run-newline): Remove now unneeded function.

2010-07-23  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-methods): Move hostname to the end in all
	plink `tramp-login-args'.

2010-07-23  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-open-shell): New defun.
	(tramp-find-shell, tramp-open-connection-setup-interactive-shell):
	Use it.

2010-07-23  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-file-name-regexp-unified)
	(tramp-completion-file-name-regexp-unified): On W32 systems, do
	not regard the volume letter as remote filename.  (Bug#5447)

2010-07-23  Juanma Barranquero  <lekktu@gmail.com>

	* custom.el (custom-declare-variable): Give a clearer error message
	when the docstring is missing (bug#6476).

2010-07-22  Michael R. Mauger  <mmaug@yahoo.com>

	* progmodes/sql.el: Version 2.4.  Improved Login prompting.
	(sql-login-params): New widget definition.